Fix 'Hangs on MySQL script import when a column has a character set'.

FIXED-IN:2.17.2 (KDE Applications 15.08.2)
BUG:353668